--- a/poga.html
+++ b/poga.html
@@ -1,1 +1,8 @@
+<!DOCTYPE html>
+<html>
+<body>
+  
+<button type="button" onclick="alert('WOW TU UZSPIEDI UZ POGAS')">Click šeit!</button>
 
+</body>
+</html>
