--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h1>I'm Big Chungus</h1>
 <p>Chungus#5943</p>
   
-<a href="otra_lapa.html">Click Here!</a>
+<a href="poga.html">Click Here!</a>
 
 </body>
 </html>
