--- a/bilde.html
+++ b/bilde.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<img src="bilde.html" alt="Flowers in Chania">
+<img src="https://kursors.lv/2021/04/22/latvija-tapusi-pirma-tiktok-maja/" alt="WOW TIKTOK">
 
 </body>
 </html>
